--- a/initial/Jenkinsfile
+++ b/initial/Jenkinsfile
@@ -1,6 +1,6 @@
 node{
 	stage('SCM Checkout'){
-		git 'https://github.com/surya945/SpringBoot.git'
+		git 'https://github.com/surya945/SpringBoot'
 	}
 	stage('Compile-Package'){
 		sh 'mvn package'
